<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:padding="5dp"
        android:text="@string/welcome_to_ultimate_budgeting"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/spendingButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:text="@string/spending"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

    <Button
        android:id="@+id/budgetingButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/budgeting"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spendingButton" />



</androidx.constraintlayout.widget.ConstraintLayout>